--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Casey</title>
-  </head>
 
-  <body class="bg-gray-500">
-    <div class="p-4 pt-2"></div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./index.css" />
+  <title>Casey</title>
+</head>
+
+<body class="bg-fb-bg">
+  <!-- TODO:header -->
+  <header class="fixed top-0 left-0 right-0 flex h-[56px] w-full items-center justify-between bg-fb-header px-4">
+    <!-- TODO:header-left -->
+    <div class="flex items-center">
+      <!-- Fb-logo -->
+      <svg viewBox="0 0 36 36" class="fill-current text-fb" height="39" width="39">
+        <defs>
+          <linearGradient x1="50%" x2="50%" y1="97.0782153%" y2="0%">
+            <stop offset="0%" stop-color="#0062E0"></stop>
+            <stop offset="100%" stop-color="#19AFFF"></stop>
+          </linearGradient>
+        </defs>
+        <path d="M15 35.8C6.5 34.3 0 26.9 0 18 0 8.1 8.1 0 18 0s18 8.1 18 18c0 8.9-6.5 16.3-15 17.8l-1-.8h-4l-1 .8z">
+        </path>
+        <path class="fill-current text-white"
+          d="M25 23l.8-5H21v-3.5c0-1.4.5-2.5 2.7-2.5H26V7.4c-1.3-.2-2.7-.4-4-.4-4.1 0-7 2.5-7 7v4h-4.5v5H15v12.7c1 .2 2 .3 3 .3s2-.1 3-.3V23h4z">
+        </path>
+      </svg>
+      <!-- search-bar 只在手機版顯示-->
+      <button class="popover-btn lg:hidden">
+        <img src="https://bruce-fe-fb.web.app/image/search.svg" />
+      </button>
+      <div class="ml-2 hidden w-[240px] items-center rounded-full bg-fb-input py-2 px-3 lg:flex">
+        <svg xmlns="http://www.w3.org/2000/svg" class="mr-2 h-[18px] w-[18px]" fill="none" viewBox="0 0 24 24"
+          stroke="#9ba3af">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+        </svg>
+        <input type="text" class="w-full bg-transparent text-white focus:outline-none" placeholder="搜尋 Facebook" />
+      </div>
+    </div>
+    <!-- TODO:header-right -->
+    <div class="flex items-center relative">
+      <button id="plus-btn" class="popover-btn">
+        <img src="https://bruce-fe-fb.web.app/image/plus.svg" />
+      </button>
+      <button id="msg-btn" class="popover-btn">
+        <img src="https://bruce-fe-fb.web.app/image/messenger.svg" />
+      </button>
+      <button id="motificaion-btn" class="popover-btn">
+        <img src="https://bruce-fe-fb.web.app/image/bell.svg" />
+      </button>
+      <button id="popover-btn" class="popover-btn">
+        <img src="https://bruce-fe-fb.web.app/image/down.svg" />
+      </button>
+      <!--TODO: 下拉選單 -->
+      <div id="plus-panel" class="popover-panel">
+        <p class="text-white mb-3 text-2xl">建立</p>
+        <div class="flex items-center p-1 mb-2 hover:bg-fb rounded-lg cursor-pointer">
+          <div class="bg-fb-input rounded-full p-2 mr-2 flex justify-center items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" width="22" height="22" viewBox="0 0 24 24"
+              stroke="white">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
+            </svg>
+          </div>
+          <div>
+            <p class="text-sm text-white mb-[2px]">貼文</p>
+            <p class="text-xs text-gray-400">在動態消息分享貼文</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </header>
+  <!-- TODO:main -->
+  <main class="flex min-h-[100vh] pt-main-span">
+    <!-- TODO:左側資訊欄 -->
+    <div class="sticky top-main-span hidden h-full w-full max-w-[360px] lg:block">
+      <p class="w-full bg-blue-300">左側資訊欄</p>
+    </div>
+
+    <!-- TODO:動態牆 -->
+    <div class="mx-auto h-[200vh] w-full max-w-[744px]">
+      <p class="w-full bg-white">動態牆</p>
+    </div>
+
+    <!-- TODO:右側資訊欄 -->
+    <div class="sticky top-main-span hidden h-full w-full max-w-[360px] lg:block">
+      <p class="w-full bg-green-300">右側資訊欄</p>
+    </div>
+  </main>
+
+</body>
+
 </html>
